resources/CSS/index.css
html {
    scroll-padding-top: 100px;
    scroll-behavior: smooth;

}

body {
    background-color: rgb(0, 0, 0);
    font-family: 'Prompt', sans-serif;
    margin: 0;
    padding: 0;
    width: 100%;
}


/* NAV BAR */
nav {
    background-color: rgb(194, 0, 40);
    display: flex;
    justify-content: space-between;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 10;
}

#mobile-nav {
    display: none;
}

nav #my-logo {
    border: black solid 4px;
    font-family: 'Righteous', cursive;
    padding: 12px;
    margin: 12px;
}

nav ul {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    height: 86px;
    justify-items: center;
    margin: 0;
}

nav li {
    display: inline-block;
    padding: 7px;
    margin: auto 0;
    padding-right: 25px;
    font-size: 24px;
}

nav a {
    text-decoration: none;
    color: rgb(0, 0, 0);
    font-weight: bold;
}

@media only screen and (max-width: 850px) {
    nav li {
        font-size: 16px;
    }
}

@media only screen and (max-width: 650px) {
    nav ul {
        grid-template-columns: 1fr 1fr 1fr;
        direction: rtl;
        padding-right: 15px;
    }

    nav li {
        padding-right: 7px;
    }

    #desktop-nav {
        display: none;
    }

    #mobile-nav {
        display: inline-grid;
    }
}


/* HEADER */
#title-div {
    margin-top: 150px;
    border-bottom: crimson ridge 10px;
}

header {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin: 50px 0;
}

#header-pfp {
    width: 30%;
    object-fit: cover;
    border: crimson ridge 5px;
    padding: 5px;
    border-radius: 20px;
    align-self: center;
}

#intro-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0 30px;
    border-radius: 45px;
}

#intro {
    font-family: 'Prompt', sans-serif;
    font-size: 40px;
    color: rgb(169, 169, 169);
    width: auto;
    text-align: left;
    margin: 0 auto;
    text-shadow: rgb(194, 0, 40) 2px 2px;
}

#intro-name {
    font-size: 100px;
    font-family: 'Bruno Ace SC', cursive;
    color: rgb(194, 0, 40);
    text-shadow: rgb(211, 211, 211) 2px 2px;
}

#intro-link {
    text-align: center;
    font-size: 30px;
    font-family: 'Racing Sans One', cursive;
    font-weight: 300;
    color: rgb(86, 238, 244);
    border: rgb(211, 211, 211) solid 2px;
    border-radius: 30px;
    padding: 5px 15px;
    margin: 15px;
    text-decoration: none;
}

#intro-blurb {
    display: flex;
    justify-content: center;
    text-align: center;
    color: rgb(169, 169, 169);
    font-family: 'Prompt', sans-serif;
    font-size: 20px;
    margin: 50px 8%;
}

#intro-blurb p {
    border-left: 2px solid rgb(86, 238, 244);
    border-right: 2px solid rgb(86, 238, 244);
    padding: 0 50px;
    width: 80%;
}

@media only screen and (max-width: 1300px) {
    #intro {
        text-align: center;
        font-size: 30px;
    }

    #intro-name {
        font-size: 75px;
    }
}

@media only screen and (max-width: 950px) {
    header {
        height: 30%;
        justify-content: center;
    }

    #header-pfp {
        width: 25%;
    }

    #intro {
        font-size: 20px;
    }

    #intro-name {
        font-size: 50px;
    }

    #intro-blurb {
        font-size: 14px;
        margin: 25px 4%;
    }
}

@media only screen and (max-width: 750px) {
    #header {
        height: 25%;
    }
}

@media only screen and (max-width: 650px) {
    #header {
        flex-direction: column-reverse;
        margin-bottom: 25px;
    }

    #header-pfp {
        width: 50%;
    }

    #intro-blurb p {
        padding: 0 15px;
        width: 100%;
    }
}

@media only screen and (max-width: 450px) {
    #intro-name {
        font-size: 38px;
    }
}


/* SECTION CSS */
.section {
    margin-top: 100px;
    padding-bottom: 10px;
}

.section-title {
    width: 40%;
    color: rgb(86, 238, 244);
    font-family: 'Racing Sans One', cursive;
    font-size: 60px;
    font-weight: 500;
    font-style: italic;
    text-align: center;
    padding: 10px 0;
    margin: 10px auto 30px;
    position: relative;
    top: 10px;
    border-left: solid rgb(86, 238, 244) 5px;
    border-right: solid rgb(86, 238, 244) 5px;
    text-shadow: black 2px 2px;
}

@media only screen and (max-width: 950px) {
    .section-title {
        width: 70%;
        font-size: 45px;
    }

    .section {
        margin-top: 50px;
        padding-bottom: 20px;
    }
}

@media only screen and (max-width: 500px) {
    .section-title {
        width: 90%;
    }
}


/* Projects */
#projects {
    text-align: center;
    background-color: black;
}

#project-container {
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.project-card {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 20px;
    width: 75%;
    background-color: rgb(169, 169, 169);
    margin: 20px 25px;
}

.project-description {
    width: 60%;
    font-size: larger;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.project-card h3 {
    font-size: 35px;
    margin: 10px 0
}

.project-card p {
    font-size: 18px;
    padding: 0 20px;
}

.mobile-project {
    display: none;
}

.project-img-container {
    width: 40%;
}

.project-img {
    width: 100%;
    height: 100%;
    border-radius: 10px;
}

#projects a {
    color: rgb(0, 0, 0);
    text-shadow: rgb(194, 0, 40) 1px 1px;
}

.project-link-container {
    padding: 2.1% 0;
    margin-bottom: 1px;
}

.project-link {
    font-size: 24px;
    padding: 1%;
    border-radius: 5px;
    line-height: 100%;
}

.project-img,
.project-link {
    border: black solid 5px;
    border-bottom: black ridge 10px;
    box-sizing: border-box;
}

.project-img:hover,
.project-link:hover {
    border-color: rgb(86, 238, 244);
}

@media only screen and (max-width: 1500px) {
    .project-card {
        width: 90%;
    }

    .project-link {
        font-size: 20px;
    }
}

@media only screen and (max-width: 1300px) {
    .project-card p {
        font-size: 14px;
    }

    .project-link {
        font-size: 16px
    }
}

@media only screen and (max-width: 1050px) {
    .desktop-project {
        display: none;
    }

    .mobile-project {
        display: block;
        width: 95%;
        height: 45%;
        margin: 0 auto;
    }

    .project-img {
        height: 350px;
        object-fit: cover;
        object-position: 0 0;
    }

    .project-description {
        width: 100%;
        height: min-content;
        justify-content: center;
    }
}

@media only screen and (max-width: 500px) {
    .project-img {
        height: 250px;
    }
}

/* ABOUT ME */
#bio {
    width: 90%;
    padding: 0;
    margin: 1% auto 5%;
}

#profile {
    display: flex;
}

#pfp {
    width: 23%;
    border-radius: 50px;
    padding: 20px 20px 0;
    object-fit: cover;
}

.about {
    color: white;
    display: flex;
    flex-direction: column;
    text-align: justify;
    margin: 0 20px;
    font-size: 18px;
}

.about p {
    margin: 15px 0 0;
}

.mobile-about {
    display: none;
}

#resume {
    color: white;
    margin-top: 15px;
}

#resume h3 {
    text-align: center;
    font-size: 24px;
    margin: 10px;
}

.skills-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    width: 80%;
    margin: 0 auto;
    justify-items: center;
    text-align: left;
}

.skills-list {
    margin: 0;
    list-style-type: square;
}

#resume-link {
    color: white;
    border: rgb(86, 238, 244) solid 3px;
    border-bottom: rgb(86, 238, 244) ridge 6px;
    border-radius: 20px;
    padding: 5% 8%;
    margin: 1.5% auto auto;
    box-sizing: border-box;
}

#resume-link[href$=".pdf"]::after {
    content: url(../images/pdf-icon.png);
    vertical-align: sub;
    text-decoration: none;
}

@media only screen and (max-width: 1350px) {
    .skills-container {
        width: 100%;
        grid-template-columns: 1fr 2fr 1fr;
    }

    .about {
        font-size: 14px;
    }
}

@media only screen and (max-width: 680px) {
    .desktop-about {
        display: none;
    }

    .mobile-about {
        display: block;
    }

    #bio {
        width: 100%;
    }

    #pfp {
        padding-right: 0;
    }
}

@media only screen and (max-width: 500px) {
    .skills-container {
        grid-template-columns: 3fr 5fr;
        row-gap: 5%;
    }

    #resume-link {
        grid-column: 1 / span 2;
    }

    .about {
        font-size: 12px;
    }

    #pfp {
        width: 35%;
    }
}


/* Contact Section */
#contact {
    width: 100%;
    background-color: rgb(194, 0, 40);
    text-align: center;
    margin-bottom: 0;
    bottom: 0;
}

.contact-list {
    padding: 20px 0 0;
    margin: 0;
}

.contact-item {
    display: inline-block;
    font-size: larger;
    padding: 0 20px 20px;
    font-weight: 600;
}

#contact a img {
    max-height: 1.5rem;
    vertical-align: middle;
}

.contact-link {
    color: black;
    text-transform: none;
}

#icon-list {
    display: none;
    padding-top: 0;
}

@media only screen and (max-width: 650px) {
    .hide-icon {
        display: none;
    }

    #icon-list {
        display: block;
    }
}

